# cachelite

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench.py
cachelite/: __init__.py  __main__.py  api.py  cli.py  decorators.py  errors.py  events.py  patterns.py  stats.py  types.py  utils.py
cachelite/core/: __init__.py  cache.py  config.py
cachelite/eviction/: __init__.py  base.py  fifo.py  lfu.py  lru.py  random_evict.py
cachelite/expiry/: __init__.py  active.py  lazy.py  ttl.py
cachelite/storage/: __init__.py  memory.py  snapshot.py
cachelite/sync/: __init__.py  rwlock.py  striped.py
docs/: index.html
examples/: basic_usage.py  memoization.py  pattern_invalidation.py  persistent_cache.py  ttl_caching.py
tests/: test_active_expiry.py  test_api.py  test_cache.py  test_cli.py  test_concurrency.py  test_decorators.py  test_events.py  test_fifo.py  test_integration.py  test_lfu.py  test_lru.py  test_patterns.py  test_random.py  test_rwlock.py  test_snapshot.py  test_stats.py  test_striped.py  test_ttl.py  test_utils_config.py
