[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cachelite"
version = "1.0.0"
description = "A high-performance, zero-dependency in-memory cache engine built from scratch in Python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Haji Rufai" }]
keywords = ["cache", "lru", "lfu", "ttl", "in-memory", "redis", "data-structures", "concurrency"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/hajirufai/cachelite"
Documentation = "https://hajirufai.github.io/cachelite/"
Repository = "https://github.com/hajirufai/cachelite"

[project.scripts]
cachelite = "cachelite.cli:main"

[tool.setuptools.packages.find]
include = ["cachelite*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
